otus-homework-3/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-homework-deployment
  labels:
    app: otus-homework-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: otus-homework
  template:
    metadata:
      labels:
        app: otus-homework
    spec:
      containers:
        - name: otus-homework
          image: mshagun/otus-homework-2:1.0
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
